--- a/css/app.css
+++ b/css/app.css
@@ -2,12 +2,34 @@
      box-sizing: border-box;
      font-family: 'Roboto', sans-serif;
  }
+ body{
+   background-image: url("../img/fondotabla.jpg");
+    background-size: auto;
+ }
+ .row-titulo{
+   min-height: 150px;
+ }
+ .col-titulo{
+ min-height: 150px;
+   border-right: 1px solid darkgray;
+
+ }
   .row-fav {
-    padding-bottom:5px;
+    padding-top:5px;
  }
+ .row-fav-div {
+   padding-top:20px;
+}
  #fav{
-   color: #2ba6cb;
+   color: #ffffff;
  }
+.menu li  a{
+ color: #ffffff;
+}
+.menu .is-active > a {
+  background-color: #E3655B;
+  color: #ffffff;
+}
 ul li {
   width: 100%;
 }
@@ -30,4 +52,33 @@ ul li {
   color: #ffffff;
   padding: 10px;
 
+}
+.card-divider{
+  background-color: #52414C;
+  color: #ffffff;
+}
+.card-p{
+  padding: 10px;
+}
+.button {
+  background-color: #E3655B;
+  color: #ffffff;
+}
+.media-object{
+  border-style: solid;
+  border-width: 1px;
+  padding: 10px;
+  border-color:  #E3655B;
+  border-radius: 10px;
+}
+.histo:hover{
+  background-color: #E3655B;
+  color:#ffffff;
+}
+
+.histo a:link, .histo a:visited {
+    color: white;
+    padding: 2px 0px;
+    text-decoration: none;
+    display: inline-block;
 }
